# AlphaFactory

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dashboard_app.py  orders.csv  requirements.txt  run_strategy.py  run_training.py
backtester/: backtest.py  portfolio.py  slippage_models.py
configs/: data_config.yaml  rl_config.yaml
data/: download_data.py
data/crypto/: ADA-USD.csv  AVAX-USDT_1h.csv  BTC-USD.csv  BTC-USDT_1h.csv  ETH-USD.csv  ETH-USDT_1h.csv  MATIC-USDT_1h.csv  SOL-USDT_1h.csv
data/equities/: AAPL.csv  MSFT.csv
data/fx/: EURUSD.csv
execution/: make_orders_from_positions.py
execution_engine/: CMakeLists.txt  alpha_simulator  main.cpp  matching_engine.cpp  orderbook.hpp  python_wrapper.cpp  risk_checks.cpp  simulator.cpp  simulator.hpp
logs/ppo_crypto_trading/PPO_1/: events.out.tfevents.1769707325.giorgos-VMware.66891.0
logs/ppo_crypto_trading/PPO_2/: events.out.tfevents.1769707339.giorgos-VMware.67043.0
logs/ppo_crypto_trading/PPO_3/: events.out.tfevents.1769707412.giorgos-VMware.67387.0
logs/ppo_multi_crypto/PPO_1/: events.out.tfevents.1769707616.giorgos-VMware.68113.0
logs/ppo_multi_crypto/PPO_2/: events.out.tfevents.1769766303.giorgos-VMware.75047.0
notebooks/: 01_feature_engineering.ipynb  02_model_training.ipynb  03_pnl_analysis.ipynb
research/: backtest.py  common.py  crypto_env.py  data_loader.py  ensemble.py  evaluation.py  feature_engineering.py  high_fidelity_validation.py  model_lstm.py  model_tcn.py  model_transformer.py  model_xgb.py  walk_forward.py
results/: backtest_results.csv
signals/: signal_exporter.py
signals/signal_files/: alpha_ml_signals.csv  backtest_pnl.csv  ensemble_signals.csv  orders.csv  orders_from_python.csv  positions_example.csv  wf_results.pkl
tests/: test_loader.py  verify_enhancements.py
(+1 files in other folders)
